--- a/PlantillaAPK/app/src/main/res/values/strings.xml
+++ b/PlantillaAPK/app/src/main/res/values/strings.xml
@@ -5,5 +5,10 @@
     <string name="NombreRadio">Al Radio</string>
     <string name="Version">Version</string>
     <string name="NumVersion">1.0</string>
+    <string name="visitanos">Vísitanos en </string>
+    <string name="descripcion">Aquí \niría\nla \ndescripción\nde la \nradio\ncomo \npueden \nver\ncompañeros \nsoy \ntodo \nun \ncrack\nlos \ncarreo\ncuando \nquieran\nizi\npici\ntu\nabuela\nen\nbici</string>
     <string name="DescripcionLogo">Representa el logo de cada emisora</string>
+    <string name="textview">TextView</string>
+    <string name="solicitud"><a href="https://codigosur.org/forms/membresia-radial/">¡Solicita aquí tu streaming!</a> </string>
+
 </resources>
