--- a/PlantillaAPK/app/src/main/res/values/strings.xml
+++ b/PlantillaAPK/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Radio La Vecindaria esto pruba</string>
+    <string name="app_name">Radio La Vecindaria</string>
     <string name="action_settings">Settings</string>
     <string name="NombreRadio">Al Radio</string>
     <string name="Version">Version</string>
